[package]
name = "content_distribution_network"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A process for distributing, searching, retrieving, and streaming content in a decentralized network."
homepage = "http://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/content-distribution-network"
repository = "https://github.com/resolvingarchitecture/content-distribution-network"
publish = true
readme = "README.md"
keywords = ["decentralized","decentralization","p2p","peer-to-peer"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
failure = "0.1.5"
exitfailure = "0.5.1"

ra_common = "0.0.2"

[dev-dependencies]
assert_cmd = "0.10"